# AcoustiJack

./: .gitignore  .gitmodules  LICENSE  README.md  env.sh  install.sh  launch.py  object-follower.py  requirements.txt  setup_env.sh
attack/: ID_Transfer.py  coord_trans.py  gimbal_atk.py  mock_tracker.py  motion_atk.py  opt_gim_motion.py  profiled_motion_model.py
bash/: claim1.sh  claim2.sh  run_sim_suite.sh
config/eval/worlds/: sonoma_raceway.sdf
config/eval/worlds/fin_sys/: finals_systems_prize.sdf
config/eval/worlds/warehouse/models/aws_robomaker_warehouse_GroundB_01/: model.sdf
config/objects/casual_female_green/: model.sdf
config/objects/casual_female_green/meshes/: casual_female_green.dae
config/objects/casual_female_red/: model.sdf
config/objects/casual_female_red/meshes/: casual_female_red.dae
config/objects/hatchback_blue/: model.sdf
config/objects/hatchback_blue/meshes/: hatchback.mtl
config/objects/hatchback_red/: model.sdf
config/objects/hatchback_red/meshes/: hatchback.mtl
config/objects/pickup/: model.sdf
config/socialForce/: social_force.toml
config/worlds/: field.sdf  gimbal_model.sdf  raceway.sdf  urban.sdf  urban_car.sdf  warehouse.sdf
docs/: claim1.md  claim2.md
kcf-master/: main_trax.cpp  main_vot.cpp
kcf-master/src/: kcf.cpp  kcf.h
onboard/: camera_mot.py  camera_sot.py  model.py  tracker.py
onboard/DaSiamRPN/code/: run_SiamRPN.py
onboard/UCMCTrack/: demo.py
onboard/UCMCTrack/detector/: mapper.py
onboard/UCMCTrack/tracker/: ucmc.py
plugins/ActorControllerPlugin/: CMakeLists.txt  package.xml  setup.md
plugins/ActorControllerPlugin/src/: actor_controller_plugin.cc  actor_controller_plugin.hh
plugins/ActorPositionControllerPlugin/: CMakeLists.txt  package.xml
plugins/ActorPositionControllerPlugin/src/: actor_pos.cc  actor_pos.hh
plugins/CameraTransPlugin/: CMakeLists.txt  package.xml
plugins/CameraTransPlugin/src/: camera_trans.cc  camera_trans.hh
pysot/tracker/: siamrpn_tracker.py
utils/: KalmanFilter_TF.py  ecc.py  exp_utils.py  gazebo_ros_bridge_config.json  gz_helper.py  kcf_resp.py  ros_helper.py  sort.py  sort_TF.py  topic_bridge_manager.py  trackFromVideo.py  trans_mat.py
utils/eval/: eval.py  helper.py  offline_eval.py  tracker_objects.py
